@@ -34,6 +34,7 @@ export(prefscal)
 export(transform)
 export(transPrep)
 export(vmu)
+export(confEllipse)
 
 S3method(print, smacofB)
 S3method(summary, smacofB)
@@ -46,6 +47,7 @@ S3method(summary, smacofSP)
 S3method(residuals, smacof)
 S3method(residuals, smacofID)
 S3method(residuals, smacofR)
+S3method(plot, confell)
 S3method(plot, smacof)
 S3method(plot, smacofR)
 S3method(plot, smacofID)
@@ -57,6 +59,8 @@ S3method(print, icexplore)
 S3method(plot, icexplore)
 S3method(jackknife, smacofB)
 S3method(bootmds, smacofB)
+S3method(confEllipse, smacofID)
+S3method(confEllipse, smacofB)
 S3method(permtest, smacof)
 S3method(permtest, smacofR)
 S3method(biplotmds, smacof)
